# big-launcher

./: CMakeLists.txt  README.md  vcpkg.json
.github/workflows/: build.yml
config/: vcpkg.cmake
src/: CMakeLists.txt  config.cpp  config.hpp  drawable.hpp  gamepad.cpp  gamepad.hpp  hotkey.cpp  hotkey.hpp  image.cpp  image.hpp  layout.cpp  layout.hpp  logger.hpp  main.cpp  main.hpp  menu.cpp  menu.hpp  menu_highlight.cpp  menu_highlight.hpp  object.hpp  renderer.hpp  renderer_sdl.cpp  renderer_sdl.hpp  screensaver.cpp  screensaver.hpp  sidebar_entry.cpp  sidebar_entry.hpp  sidebar_highlight.cpp  sidebar_highlight.hpp  sound.cpp  sound.hpp  text.cpp  text.hpp  util.cpp  util.hpp
src/platform/: CMakeLists.txt  platform.hpp  unix.cpp  win32.cpp
